tests/parsing/smtlib/v2.6/errors/149_function_def_bad_body_1.expected
File "tests/parsing/smtlib/v2.6/errors/149_function_def_bad_body_1.smt2", line 2, character 28-29:
2 | (define-fun-rec foo () bool _)
                                ^
Error while parsing a function definition, read the reserved word '_',
      but expected a term for the body of the function.
